:lipstick: Support html pasted item preview